Show help if you arrow-up but don't have any previous commands yet
- @jorgemanrubia this is a little fragile because it relies on CSS `:empty` which fails if any whitespace is present, which is why I needed to make the `<ul>` a one-liner. If we like this we may want to implement something more robust

--- a/app/assets/stylesheets/terminals.css
+++ b/app/assets/stylesheets/terminals.css
@@ -78,7 +78,8 @@
   .terminal__help {
     display: none;
 
-    .terminal--showing-help & {
+    .terminal--showing-help &,
+    .terminal--open .terminal__menu:empty ~ & {
       border-block-end: 1px dashed;
       display: block;
       margin-block-end: 0.5lh;
