--- a/app/views/commands/_form.html.erb
+++ b/app/views/commands/_form.html.erb
@@ -8,14 +8,13 @@
       } do %>
   <label class="terminal__label txt-nowrap" for="fizzy_do">Fizzy do &gt;</label>
 
-  <%= text_field_tag "command", nil,
-        autocomplete: "off",
-        autocorrect: "off",
-        autocapitalize: "off",
+  <%= rich_textarea_tag "command", nil,
+        toolbar: false,
         class: "terminal__input input fill-transparent unpad",
+        "single-line": true,
         data: {
           terminal_target: "input",
-          action: "keydown.up->toggle-class#add:prevent keydown.up->navigable-list#selectCurrentOrReset:stop terminal#hideError"
+          action: "keydown.enter->terminal#submitCommand keydown.up->toggle-class#add:prevent keydown.up->navigable-list#selectCurrentOrReset:stop terminal#hideError"
         },
         placeholder: platform.desktop? ? "Press #{ hotkey_label(["ctrl", "K"]) } to search or type commands…" : "Search or type commands…",
         spellcheck: "false" %>
