--- a/app/views/filters/_closers.html.erb
+++ b/app/views/filters/_closers.html.erb
@@ -47,7 +47,7 @@
                 <%= hidden_field_tag :expand_all, @expand_all %>
               <% end %>
 
-              <%= form.button type: "submit", class: "btn popup__item min-width full-width unpad-inline" do %>
+              <%= form.button type: "submit", class: "popup__item btn full-width unpad-inline" do %>
                 <span class="overflow-ellipsis flex-item-grow"><%= user.name %></span>
                 <% if filter.closers.include?(user) %>
                   <%= icon_tag "check", class: "checked flex-item-justify-end" %>
