--- a/app/views/filters/_indexed_by.html.erb
+++ b/app/views/filters/_indexed_by.html.erb
@@ -14,7 +14,7 @@
 				navigable_list_focus_on_selection_value: false,
 				navigable_list_actionable_items_value: true } do %>
       <strong class="popup__title txt-nowrap">Sort by…</strong>
-      
+
       <ul class="popup__list" data-filter-target="list">
         <% Filter::INDEXES.each do |index| %>
           <li class="popup__group flex align-center" data-navigable-list-target="item">
@@ -29,7 +29,7 @@
                 <%= hidden_field_tag :expand_all, @expand_all %>
               <% end %>
 
-              <%= form.button type: "submit", class: "btn popup__item min-width full-width unpad-inline" do %>
+              <%= form.button type: "submit", class: "popup__item btn full-width unpad-inline" do %>
                 <span class="overflow-ellipsis flex-item-grow"><%= index.humanize %></span>
                 <% if filter.indexed_by == index %>
                   <%= icon_tag "check", class: "checked flex-item-justify-end" %>
